test/positive/feature_characterescapes.java

public class feature_characterescapes {
  public feature_characterescapes() {}
  protected String x = "\b\t\n\f\r\"\'\\\064";
}

