test/negative/BadVoid1.java
public class BadVoid {
    public BadVoid() {
        void x = 7;
    }
}
